package com.adet.anomalydetection.models;

public class Driver {
    
}
