package com.adet.anomalydetection.models;

public class Route {
    
}
